[gd_scene load_steps=7 format=3 uid="uid://dp87vywdj74a2"]

[ext_resource type="Texture2D" uid="uid://dgcw0vs3drey1" path="res://assets/background.png" id="1"]
[ext_resource type="PackedScene" uid="uid://ns04fyb78s05" path="res://scenes/Buttons/VioletGenerator/VioletGenerator.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://nwbl03ueqyor" path="res://scenes/Buttons/RedGenerator/RedGenerator.tscn" id="3"]
[ext_resource type="PackedScene" path="res://scenes/Buttons/Reset/Reset.tscn" id="4"]
[ext_resource type="Script" path="res://scenes/Menu/Menu.gd" id="5"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(1519.98, 67.3924)

[node name="Menu" type="Node2D"]
script = ExtResource("5")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(577.964, 323.633)
scale = Vector2(3.59398, 3.2109)
texture = ExtResource("1")

[node name="RedGenerator" parent="." instance=ExtResource("3")]
offset_left = 204.0
offset_top = 118.0
offset_right = 332.0
offset_bottom = 246.0

[node name="VioletGenerator" parent="." instance=ExtResource("2")]
offset_left = 835.0
offset_top = 118.0
offset_right = 963.0
offset_bottom = 246.0

[node name="Reset" parent="." instance=ExtResource("4")]
offset_left = 495.0
offset_top = 293.0
offset_right = 647.0
offset_bottom = 360.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Floor" type="StaticBody2D" parent="."]
position = Vector2(513.885, 577.225)

[node name="Collision" type="CollisionShape2D" parent="Floor"]
shape = SubResource("1")

[node name="CountLabel" type="Label" parent="."]
offset_left = 479.0
offset_top = 265.0
offset_right = 659.0
offset_bottom = 291.0
size_flags_horizontal = 4
text = "Cantidad de Instancias:
"
